Support openssh key format

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "comma-dangle": "off",
         "no-param-reassign": "off",
         "no-plusplus": "off"
     }
