--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "tap": "^14.6.4"
+  },
+  "dependencies": {
+    "bcrypt-pbkdf": "^1.0.2"
   }
 }
